--- a/r-rstudio.qmd
+++ b/r-rstudio.qmd
@@ -6,7 +6,7 @@ You can skip all the whole of [ -@sec-installing-r] if you already have R and RS
 
 ## Installing R and RStudio {#sec-installing-r}
 
-R and RStudio are free to install and use softwares. To install them software, you need to download and install the right file for your machine's operating system (OS). Below are the installation instructions based on operating system.
+R and RStudio are free to use and install software. The guide below provides the steps to install both software.
 
 ### Installing R {#sec-install-r}
 
@@ -46,9 +46,9 @@ To install RStudio, visit the link <https://posit.co/download/rstudio-desktop/> 
 
 ## The RStudio Interface
 
-When you open RStudio newly, you are presented with three panes by default. You can get a fourth pane like what is shown in @fig-rstudio-environment. To do this, click the **+** button at the top-left and select R Script, or use the keyboard shortcut `Ctrl + Shift + N` on Windows/Linux and `Cmd + Shift + N` on Mac. More details on the panes is provided in @sec-panes
+When you open RStudio newly, you are presented with three panes by default. To get a fourth pane like what is shown in @fig-rstudio-environment, click the **+** button at the top-left and select R Script, or use the keyboard shortcut `Ctrl + Shift + N` on Windows/Linux and `Cmd + Shift + N` on Mac.
 
-![R Studio Environment](images/r_interface.png){#fig-rstudio-environment}
+![R Studio Environment](images/r_interface.png){#fig-rstudio-environment .lightbox}
 
 You can change the arrangement of the panes by clicking `Tools` on the menu bar then navigate to `Global Options` and `Pane Layout` in the popup box.
 
@@ -56,33 +56,26 @@ You can change the arrangement of the panes by clicking `Tools` on the menu bar 
 
 The four components/panes shown in @fig-rstudio-environment are:
 
-1.  **Source Pane**: Located in the top-left. This pane shows after adding a R script. The R script is where you will do most of data analysis task. It is technically a plain text file containing a series of R commands that are executed in sequence. The source pane also shows your dataset in spreadsheet-like format.
+1.  **Source Pane**: Located in the top-left. This pane shows after adding a R script. The R script is where you will do most of your data analysis task. It is technically a plain text file with a .R extension containing a series of R commands that are executed in sequence. It also serves as an editor for other programming languages. The source pane displays the dataset in spreadsheet-like format.
 
-![Source window](images/rscript.png)
+![Source window](images/rscript.png){.lightbox}
 
-2.  **Console/Terminal/Background Jobs pane**: Located in the bottom-left. It include the **Console** pane where outputs and results of your analysis are displayed. The console is also an interactive section where you can write code and carry out some analysis. All the codes written in the script are usually displayed and executed on the console. This pane also include the **Terminal** pane which provides direct access to your computer using command line. Lastly, we have the **Background Jobs** pane which allows you to run tasks in the background while you continue working on other tasks in the main R session. This pane is especially useful for long-running operations that might otherwise block your R session, such as data processing, simulations, or model fitting.
+2.  **Console/Terminal/Background Jobs pane**: Located in the bottom-left. It include the **Console** tab where outputs and results of your analysis are displayed. The console is also an interactive section where you can write code and carry out some analysis. All the codes written in the script are usually displayed and executed on the console. This pane also include the **Terminal** tab which provides direct access to your computer through a command line interface. Lastly, we have the **Background Jobs** tab which allows you to run tasks in the background while you continue working on other tasks in the main R session. This pane is especially useful for long-running operations that might otherwise block your R session, such as data processing, simulations, or model fitting. You can read more on background jobs on [RStudio User Guide](https://docs.posit.co/ide/user/ide/guide/tools/jobs.html).
 
-![Console window](images/console.png)
+![Console window](images/console.png){.lightbox}
 
-3.  **Environment / History Pane**: Located in the top-right. It includes the **Environment** pane which displays all objects created during a session, such as data and variables. We also have the **History** pane which stores the history of commands executed. This pane allows you to select previous commands and rerun them or add them back to console if you want. Located closely to **History** pane is the **Connection** pane which helps you interact with and manage connections to external data sources, such as databases, cloud services, or remote data systems. It provides a user-friendly interface for establishing and managing these connections directly from RStudio, without needing to write extensive code. After this is the **Tutorial** pane provides additional learning materials for R and RStudio. It is designed to be an interactive R tutorial.
+3.  **Environment/History/Connection/Tutorial Pane**: Located in the top-right. It includes the **Environment** tab which displays all objects created during a session, such as data and variables. It also includes some important features to import data, load and save a workspace and clear objects in an active workspace. We also have the **History** tab which stores the history of commands executed. This tab allows you to select previous commands and rerun them or add them back to console if you want. Located closely to **History** tab is the **Connections** tab which helps you interact with and manage connections to external data sources, such as databases, cloud services, or remote data systems. It displays the connections you have made to data sources, and lets you know which of them are active. After the **Connections** tab is the **Tutorial** tab which provides additional learning materials for R and RStudio. It is designed to be an interactive R tutorial and it runs on shiny and learnr package (You will learn about packages later). 
 
 ::: {.callout-note appearance="simple"}
 An R session refers to the instance of R that is currently running, which includes everything that is active in memory and the state of your environment in RStudio or any R interface.
 :::
 
-![Environment window](images/environment_pane.png)
+![Environment window](images/environment_pane.png){.lightbox}
 
-4.  **Files / Plots / Packages / Help / Viewer Window**: This is located in the bottom-right and it consists of the **Files** pane which shows files and folders in your working directory. This pane also include tools for renaming, deleting, creating, copying and moving files and folders in your computer. Next is the **Plots** pane which displays visualizations. You can also export, zoom in or out, and copy to your clipboard the visuals created in this pane. The **Packages** pane follows closely and it helps to manage packages you have. It can also be used for updating old packages as well as installing new packages. Next is the **Help** pane which shows the documentation of packages different functions. This documentation include examples which can help understand the usage of the functions. Lastly, we have the **Viewer** pane which is used to display a variety of visual outputs including interactive web content, plots, maps, and web-based applications.
+4.  **Files / Plots / Packages / Help / Viewer Window**: This is located in the bottom-right. The **Files** tab shows files and folders in your working directory. It also include buttons for renaming, deleting, creating, copying and moving files and folders just like your native file manager. The **Plots** tab is next and it displays visualizations, providing the option to zoom in or out, and copy to clipboard graphs created. The **Packages** tab follows closely and it helps to manage packages you have installed. It provides the option to update, install and remove packages through a GUI. Next is the **Help** tab, and it houses the documentation of functions, and vignettes for different packagesred. Next is the **Viewer** tab which is used to display a variety of visual outputs including interactive web content, plots, maps, rendered websites, and web-based applications. Lastly is the presentation tab which is used to view slides created through the R Markdown ecosystem.
 
-![Files window](images/file_pane.png)
+![Files window](images/file_pane.png){.lightbox}
 
-## Posit Cloud
-
-There's an option to use R and RStudio online from your browser. This is through Posit Cloud (formerly RStudio Cloud). Posit cloud is owned by the same organization that made RStudio. To use posit cloud, visit <https://posit.cloud/> and register. After registering, you get a page similar to @fig-cloud. After registering, click on new workspace on the left sidebar and create a new project.
-
-![posit cloud](images/posit-cloud.png){#fig-cloud}
-
-The video series in this [link](https://www.youtube.com/watch?v=VV_3MvJmwG4&list=PL9HYL-VRX0oSn7tBLDiSt4Vnyk3yB6ipA) is a good resource for starting with Posit Cloud.
 
 ::: {.callout-tip appearance="simple"}
 ### Script vs Console
@@ -90,12 +83,21 @@ The video series in this [link](https://www.youtube.com/watch?v=VV_3MvJmwG4&list
 It is advised to use a script to ensure reproducibility. It ensures you can edit your work when you make errors, share with others your analysis, and also reproduce all steps in your analysis instantly.
 :::
 
+## Posit Cloud
+
+There's an option to use R and RStudio online from your browser. This is through Posit Cloud (formerly RStudio Cloud). Posit cloud is owned by the same organization that made RStudio. To use posit cloud, visit <https://posit.cloud/> and register. After registering, you get a page similar to @fig-cloud, then click on **new space** on the left sidebar then **new project** on the right side to start a new R session. Options to start from a git repository and a template file is also  provided.
+
+![posit cloud](images/posit-cloud.png){#fig-cloud .lightbox}
+
+The video series in this [link](https://www.youtube.com/watch?v=VV_3MvJmwG4&list=PL9HYL-VRX0oSn7tBLDiSt4Vnyk3yB6ipA) is a good resource for starting with Posit Cloud.
+
+
 ## Positron
 
 There's a new IDE that supports Python and R that is still under development by the company Posit PBC. This is called [Positron](https://github.com/posit-dev/positron/releases). Positron is still in its early stage of development. Positron is a blend of the popular IDE VS Code and RStudio, with the major inspiration from VS Code, [@Radečić]. What makes Positron different is the ease of using python, which is one of the most common programming language of choice for data professionals. To get more details about the development, [click here](https://github.com/posit-dev/positron/releases) and [here](https://www.appsilon.com/post/introducing-positron) for detailed introduction on Positron.
 
-![Positron IDE](images/positron.png)
+![Positron IDE](images/positron.png){.lightbox}
 
 ## Summary
 
-In this chapter, we covered how to install R, and RStudio. We also introduced the different panes/windows of RStudio IDE which includes, the source, environment, console and files panes. Lastly, we introduced the Posit cloud platform, a cloud-based RStudio platform as well as Positron, which is the next iteration of IDE from Posit.co
+In this chapter we covered how to install R, and RStudio. We also introduced the different panes/windows of RStudio IDE which includes, the source, environment, console and files panes. Lastly, we introduced the Posit cloud platform, a cloud-based RStudio platform as well as Positron, which is the next iteration of IDE from Posit.co
